# wkflws_slack

./: .flake8  .gitignore  README.md  setup.cfg
tests/: test_node.py
wkflws_slack/: __init__.py  parameters.json  receive_message.py  send_message.py
wkflws_slack/triggers/: __init__.py  webhook.py
