[metadata]
name = wkflws_slack
version = attr: wkflws_slack.__version__
author = wkflws node developer
description = "wkflws node - wkflws_slack"
readme = "README.md"
license = { file="LICENSE" }
# url = https://my-url.com
project_urls =
    Bug Tracker = https://github.com/wkflws/wkflws_slack/issues/
    Source = https://github.com/wkflws/wkflws_slack/
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.10
packages = find:
install_requires =
    # wkflws Framework
    # License: Internal
    # https://github.com/wkflws/wkflws/
    wkflws[webhook] >= 0.1,<0.2
    # Slack SDK
    # License: MIT
    # https://github.com/slackapi/python-slack-sdk/blob/main/LICENSE
    slack_sdk >=3.17.0,<4.0
    # Async HTTP client. Required by Slack SDK
    # License: Apache 2.0
    # https://github.com/aio-libs/aiohttp/blob/master/LICENSE.txt
    aiohttp>=3.7.3,<4

[options.extras_require]
testing =
    # The following libraries are not hosted or distributed.
    black  # automatic formatter
    coverage  # unit test coverage analyzer
    flake8   # style checker
    flake8-docstrings   # verify docstring formatting
    flake8-import-order  # verify import order
    mypy  # static type checker
    pytest  # unit test discovery and runner
    pytest-cov  # plugin for the coverage module
    pytest-mock  # pytest wrapper for mock module


# https://coverage.readthedocs.io/en/6.3.2/config.html
[coverage:run]
# Measure branch coverage
branch = True
# To omit certain files
# omit = # e.g. src/db/env.py,src/db/versions/*
# Indicate the directories to evaluate
source = wkflws_slack/

[coverage:report]
# show missing line numbers
show_missing = True
# Omit files with 100% coverage from the report
# skip_covered = True
